Fixes squashed image issue on first pomodoro post.

--- a/_sass/components/_mixins.scss
+++ b/_sass/components/_mixins.scss
@@ -23,9 +23,9 @@
  */
 
 @mixin media-query($device) {
-    @media only screen and (min-width: $device) {
-        @content;
-    }
+  @media only screen and (min-width: $device) {
+    @content;
+  }
 }
 
 /**
@@ -50,7 +50,6 @@
   margin-right: auto;
 }
 
-
 /**
  * Hide text overflow and end with ...
  */
@@ -61,48 +60,47 @@
   white-space: nowrap;
 }
 
-
 /* Gradient mixins
    ========================================================================== */
 
 @mixin horizontal($startColor : $white, $endColor : $lightergrey) {
   background-color: $endColor;
-  background-image  : -webkit-gradient(linear, 0 0, 100% 0, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
-  background-image  : -webkit-linear-gradient(left, $startColor, $endColor);           // Safari 5.1+, Chrome 10+
-  background-image  : -moz-linear-gradient(left, $startColor, $endColor);            // FF 3.6+
-  background-image  : -ms-linear-gradient(left, $startColor, $endColor);             // IE10
-  background-image  : -o-linear-gradient(left, $startColor, $endColor);              // Opera 11.10
-  background-image  : linear-gradient(left, $startColor, $endColor);               // W3C
-  background-repeat : repeat-x;
- }
+  background-image: -webkit-gradient(linear, 0 0, 100% 0, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
+  background-image: -webkit-linear-gradient(left, $startColor, $endColor); // Safari 5.1+, Chrome 10+
+  background-image: -moz-linear-gradient(left, $startColor, $endColor); // FF 3.6+
+  background-image: -ms-linear-gradient(left, $startColor, $endColor); // IE10
+  background-image: -o-linear-gradient(left, $startColor, $endColor); // Opera 11.10
+  background-image: linear-gradient(left, $startColor, $endColor); // W3C
+  background-repeat: repeat-x;
+}
 
 @mixin vertical($startColor : $white, $endColor:  $lightergrey) {
-  background-image  : -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
-  background-image  : -webkit-linear-gradient(top, $startColor, $endColor);            // Safari 5.1+, Chrome 10+
-  background-color  : $endColor;
-  background-image  : -moz-linear-gradient(top, $startColor, $endColor);             // FF 3.6+
-  background-image  : -ms-linear-gradient(top, $startColor, $endColor);              // IE10
-  background-image  : -o-linear-gradient(top, $startColor, $endColor);             // Opera 11.10
-  background-image  : linear-gradient(top, $startColor, $endColor);                // W3C
-  background-repeat : repeat-x;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
+  background-image: -webkit-linear-gradient(top, $startColor, $endColor); // Safari 5.1+, Chrome 10+
+  background-color: $endColor;
+  background-image: -moz-linear-gradient(top, $startColor, $endColor); // FF 3.6+
+  background-image: -ms-linear-gradient(top, $startColor, $endColor); // IE10
+  background-image: -o-linear-gradient(top, $startColor, $endColor); // Opera 11.10
+  background-image: linear-gradient(top, $startColor, $endColor); // W3C
+  background-repeat: repeat-x;
 }
 
 @mixin directional($startColor : $white, $endColor : $lightergrey, $deg : 45deg) {
-  background-color  : $endColor;
-  background-image  : -moz-linear-gradient($deg, $startColor, $endColor);           // FF 3.6+
-  background-image  : -ms-linear-gradient($deg, $startColor, $endColor);            // IE10
-  background-image  : -webkit-linear-gradient($deg, $startColor, $endColor);          // Safari 5.1+, Chrome 10+
-  background-image  : -o-linear-gradient($deg, $startColor, $endColor);             // Opera 11.10
-  background-image  : linear-gradient($deg, $startColor, $endColor);              // W3C
-  background-repeat : repeat-x;
+  background-color: $endColor;
+  background-image: -moz-linear-gradient($deg, $startColor, $endColor); // FF 3.6+
+  background-image: -ms-linear-gradient($deg, $startColor, $endColor); // IE10
+  background-image: -webkit-linear-gradient($deg, $startColor, $endColor); // Safari 5.1+, Chrome 10+
+  background-image: -o-linear-gradient($deg, $startColor, $endColor); // Opera 11.10
+  background-image: linear-gradient($deg, $startColor, $endColor); // W3C
+  background-repeat: repeat-x;
 }
 
 // .bordered(COLOR, COLOR, COLOR, COLOR);
 @mixin bordered($top-color: #eee, $right-color: #eee, $bottom-color: #eee, $left-color: #eee) {
-  border-top : solid 1px $top-color;
-  border-left : solid 1px $left-color;
-  border-right : solid 1px $right-color;
-  border-bottom : solid 1px $bottom-color;
+  border-top: solid 1px $top-color;
+  border-left: solid 1px $left-color;
+  border-right: solid 1px $right-color;
+  border-bottom: solid 1px $bottom-color;
 }
 
 /* Rounded corners
@@ -114,7 +112,7 @@
  */
 
 @mixin rounded($radius:4px) {
-  border-radius : $radius;
+  border-radius: $radius;
 }
 
 /**
@@ -160,7 +158,8 @@
  */
 
 @mixin text-shadow($shadow: 0 2px 3px rgba(0,0,0,.25)) {
-text-shadow: $shadow; }
+  text-shadow: $shadow;
+}
 
 /**
  * Opacity
@@ -244,10 +243,9 @@ text-shadow: $shadow; }
 
 @mixin animation($name, $duration: 300ms, $delay: 0, $ease: ease) {
   -webkit-animation: $name $duration $delay $ease;
-  -moz-animation:    $name $duration $delay $ease;
-  -ms-animation:     $name $duration $delay $ease;
+  -moz-animation: $name $duration $delay $ease;
+  -ms-animation: $name $duration $delay $ease;
 }
-
 
 /**
  * Box-sizing
@@ -260,7 +258,6 @@ text-shadow: $shadow; }
   -ms-box-sizing: $boxsize;
   box-sizing: $boxsize;
 }
-
 
 /**
  * Hide from visual and speaking browsers
