--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -5,17 +5,27 @@
   top: 400px;
   z-index: 233;
   width: 100%;
-  padding: 20px 20px 0;
   -webkit-transform: translate3d(0,0,1px);
   transform: translate3d(0,0,1px);
-  @include media-query($small-screen) {
-    padding: 50px 30px 0;
-  }
+
   @include media-query($medium-screen) {
     height: 100vh;
     overflow-y: scroll;
     position: initial;
     top: 0;
+  }
+
+  .page-container {
+    padding: 20px 20px 0;
+
+    @include media-query($small-screen) {
+      padding: 50px 30px 0;
+      width: 100%;
+    }
+
+    @include media-query($medium-screen) {
+      width: 50vw;
+    }
   }
 }
 
@@ -151,7 +161,6 @@ a.read-more {
   margin-bottom: 40px;
   .feature-image {
     width: 100%;
-    max-height: 500px;
   }
 }
 
